examples/good/polarity.gr
foo : forall (a : Type, b : Type)
   . (a |0| -> b) -> a |1| -> b
foo f xb = let |x| : a = xb in f |x|

fooAlt : forall (a : Type, b : Type)
   . (a |0| -> b) -> a |1| -> b
fooAlt f |x| = f |x|r
