examples/illtyped/badPoly.gr
diag : forall (a : Type, b : Type) . a |*| -> (a, b)
diag |x| = (x, x)